# notifier_telegram_bot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  events.py  server.py
app/internal/repository/postgresql/: __init__.py  connection.py  notes.py  users.py
app/internal/routes/: __init__.py  webhook.py
app/internal/services/: __init__.py  note.py  telegram.py  user.py
app/internal/workers/: __init__.py  notifier.py  worker.py
app/pkg/clients/: __init__.py
app/pkg/clients/telegram_bot/: __init__.py  client.py
app/pkg/logger/: logger.py
app/pkg/models/: __init__.py
app/pkg/models/app/callback/: __init__.py  api.py  repository.py
app/pkg/models/app/notes/: __init__.py  repository.py
app/pkg/models/base/: exception.py  model.py
app/pkg/models/exceptions/: auth.py  repository.py
app/pkg/models/types/: __init__.py  strings.py  urls.py
app/pkg/settings/: __init__.py  settings.py
docker/migrations/: Dockerfile
migrations/: 20240801_01_3kbap-added-users-table.py  20240801_02_0mLG6-notes-table.py
scripts/: migrate.py
tests/: conftest.py
tests/app/internal/repositories/: test_note.py  test_user.py
tests/app/internal/services/: test_note_service.py  test_telegram_service.py  test_user_service.py
tests/app/internal/workers/: test_notify_worker.py
tests/fixtures/: settings.py
tests/fixtures/clients/: clients.py
tests/fixtures/repository/postgresql/: helpers.py  postgresql.py  repositories.py
tests/fixtures/services/: services.py
tests/fixtures/workers/: workers.py
tests/types/: equals.py  generators.py  inserters.py  responses.py
(+4 files in other folders)
